[tool.poetry]
name = "geoapp"
version = "0.1.0"
description = ""
authors = ["Keshav Sain <ksv.sain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
geopy = "^2.1.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
ipython = "7.18.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.10.0"
jedi = "^0.18.0"
isort = "^5.7.0"
ipython = "7.18.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
